# toyc

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  api.py  code_generator_output.txt  example.toyc  models.py  pyproject.toml  render.yaml  repl.py  test.json  test_codegen.py  test_comments.py  test_icg.py  test_icg_direct.py  test_icg_endpoint.py  test_icg_old.py  test_multi_stmt.py  test_normalized.py  test_optimize_endpoint.py  test_optimizer.py  test_parser.py  test_position_tracking.py  test_trace.py
backend/toyc/: __init__.py  ast.py  code_generator.py  icg.py  interpreter.py  lexer.py  optimizer.py  parser.py  semantic_analyzer.py  token.py  tracer.py  variable_analyzer.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/visualize/: page.tsx
frontend/src/components/: ASTNodeLog.tsx  ASTVisualizer.tsx  AnalyzedASTVisualizer.tsx  AnimatedAST.tsx  DirectExecutionPhase.tsx  ExecutionTreeVisualizer.tsx  ICGPhase.tsx  ICGVisualizer.tsx  LexerVisualizer.tsx  LexingPhase.tsx  ParsingPhase.tsx  ParsingWithAST.tsx  SemanticAnalysisPhase.tsx  StepByStepVisualizer.tsx  UndefinedVariablesForm.tsx
frontend/src/hooks/: useStepByStep.ts
frontend/src/lib/: api.ts
