[project]
name = "toyc-backend"
version = "0.1.0"
description = "ToyC Compiler Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

